deployment/deployment-aks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server-deployment
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
      - name: webhook-server
        image: centrify.azurecr.io/webhook-server:latest
        #imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8443
          name: webhook-api
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-server-tls
