deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-server-svc
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
