deployment/mutatingwebhook-aks.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-server-mutate
  labels:
    app: webhook-server
webhooks:
  - name: webhook-server-svc.centrify.me
    sideEffects: None
    clientConfig:
      service:
        name: webhook-server-svc
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUV5VENDQXJHZ0F3SUJBZ0lRV1Y3TjdYeTRMSjQraVlCWjN6UWJNREFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWdGdzB5TURFeE1USXdOekF4TXpoYUdBOHlNRFV3TVRFeE1qQTNNVEV6T0ZvdwpEVEVMTUFrR0ExVUVBeE1DWTJFd2dnSWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUNEd0F3Z2dJS0FvSUNBUUN6CkM0KzNzbnVKRDdsZFplM20vZkhFZ21TZ0ZYREpxckFuclE2enFwNW1rQVJsZ3pPM1NUbmVyZWJ3b0M3UzYzL1kKMzRmcGo4aE1RUXQ4UzM1a01MNXd0TVFSRFhrQi8wNTF1Vnk4TEZsOUxaSVJVK2J0bTNNYWpzVm8vdGxUNEE2cApZS2hOYjdDZCs0 [...]
    rules:
    - operations: ["CREATE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["deployments", "pods"]
