deployment/mutatingwebhook-eks.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-server-mutate
  labels:
    app: webhook-server
webhooks:
  - name: webhook-server-svc.centrify.me
    sideEffects: None
    clientConfig:
      service:
        name: webhook-server-svc
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01URXhNakEwTXpNMU4xb1hEVE13TVRFeE1EQTBNek0xTjFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTU5BCmp2THZ4UWtpVW1IL0VPdmJ3anpsTUVnMnpkbXRXUjFZWUVaV2hvTUxFR3duWjdXWnFadjIxckFuK2MyUWt4ZUQKUW5WQldMN29TanpheHFrRk1RcXJBRjB4TDlzd2pITnpkMWdhQm5NVURpT1ozVE9xYUFESlBlSlJrcGJwT1ZYWQpOV2x2T0hwSVRk [...]
    rules:
    - operations: ["CREATE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["deployments", "pods"]
