deployment/mutatingwebhook-gks.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-server-mutate
  labels:
    app: webhook-server
webhooks:
  - name: webhook-server-svc.centrify.me
    sideEffects: None
    clientConfig:
      service:
        name: webhook-server-svc
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLakNDQWhLZ0F3SUJBZ0lRT3dDaEdzT1V1Z1ZKNnlmOGQ1WGE4VEFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlRNE1HWTBaakkyWkMwMk1ERTBMVFF5TW1RdFlUZ3dOaTB5TVdJeVl6VmhabUl6TmpndwpIaGNOTWpBeE1URTRNRFExTnpVd1doY05NalV4TVRFM01EVTFOelV3V2pBdk1TMHdLd1lEVlFRREV5UTRNR1kwClpqSTJaQzAyTURFMExUUXlNbVF0WVRnd05pMHlNV0l5WXpWaFptSXpOamd3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUM0Sm1ybmo3eHd0Q1p0MEcyQ09oRnhDUjJrYTNuR1BHSXBmUWVVbUs3ZAp1MnpnTXl6b0Yz [...]
    rules:
    - operations: ["CREATE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["deployments", "pods"]
