deployment/mutatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-server-mutate
  labels:
    app: webhook-server
webhooks:
  - name: webhook-server-svc.centrify.me
    #admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    clientConfig:
      service:
        name: webhook-server-svc
        namespace: default
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01UQXdNVEF6TWpNd05Wb1hEVE13TURreU9UQXpNak13TlZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBT0pMCisvNE9wZFcrdXVQcFdDTG50M1ErQlpIbHcvTGhPZG4zS3ZZYU51TEtMcHFBdTl5Z3IyS00zak9hVUNTZTg5UWsKdys0TVFESFFaS0FBYXVTQVVRZWtpYkZaUGdaSlhOVjZPbEtxcjRWbnIxOFZJN3pld24wU0R4eGJEL2Z6aHY5SQoxSFFWUWlZTHlm [...]
    rules:
    - operations: ["CREATE"]
      apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["deployments", "pods"]
